syntax = "proto3";

package service;

message Status {
    //code = 1 means success
    int32 code = 1;
    string error = 2;
}

message MessageResponse {
    Status status = 1;
}

enum StoreType {
    BTreeDisk = 0;
    BPlusTreeDisk = 1;
}

message ConnectionRequest {
    StoreType type = 1;
}

message DisconnectRequest {
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    Status status = 1;
    string value = 2;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message RemoveRequest {
    string key = 1;
}

message RemoveResponse {
    Status status = 1;
    bool check = 2;
}

message ExistRequest {
    string key = 1;
}

message ExistResponse {
    Status status = 1;
    bool check = 2;
}

service KeyValueStoreService {
    rpc Connect (ConnectionRequest) returns (MessageResponse) {}

    rpc Disconnect (DisconnectRequest) returns (MessageResponse) {}

    rpc Get (GetRequest) returns (GetResponse) {}

    rpc Set (SetRequest) returns (MessageResponse) {}

    rpc Remove (RemoveRequest) returns (RemoveResponse) {}

    rpc Exist (ExistRequest) returns (ExistResponse) {}
}
  